// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacecraft tests Snapshot tests Default snapshot 1`] = `
<div
  className="spacecraft"
>
  <MenuButton
    icon={false}
    menuOpen={[Function]}
  />
  <LanguageChange />
  <div
    className="spacecraft-content"
  >
    <div
      className="rocket-cost-graphic-box"
    />
  </div>
  <Loading />
  <Footer />
</div>
`;

exports[`Spacecraft tests Snapshot tests With loading true and data 1`] = `
<div
  className="spacecraft"
>
  <MenuButton
    icon={false}
    menuOpen={[Function]}
  />
  <LanguageChange />
  <div
    className="spacecraft-content"
  >
    <div
      className="rocket-cost-graphic-box"
    >
      <GraphicCost
        data={
          Object {
            "0": "0",
            "1": "1",
          }
        }
      />
    </div>
    <Description />
  </div>
  <Footer />
</div>
`;

exports[`Spacecraft tests Snapshot tests With loading true and error true 1`] = `
<div
  className="spacecraft"
>
  <MenuButton
    icon={false}
    menuOpen={[Function]}
  />
  <LanguageChange />
  <div
    className="spacecraft-content"
  >
    <div
      className="rocket-cost-graphic-box"
    />
  </div>
  <Error />
  <Footer />
</div>
`;
